modificada nomeclatura de atendimento para agendamento. adicionada tela simples de login

--- a/TCC.Thalia.Teles.App/TCC.Thalia.Teles.App.csproj
+++ b/TCC.Thalia.Teles.App/TCC.Thalia.Teles.App.csproj
@@ -32,4 +32,10 @@
       <Folder Include="Properties\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Configuracoes\configuracao.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
